Fixed Contrast Toggle

--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@
   
   /* Footer */
   .footer {
-	position: fixed;
+	position: -webkit-sticky;
 	bottom: 0;
 	width: 100%;
 	background-color: #320f32;
